--- a/source/template/_common/_position.jade
+++ b/source/template/_common/_position.jade
@@ -6,17 +6,17 @@
     button(type="radio" class="setting-pos__toggle setting-pos__toggle-single setting-pos__toggle setting-pos__toggle-single_active" id="single" data-type-pos="single-mode" )
   .setting-box
       .settings-box__row
-        .settings-box__cell.block00
-        .settings-box__cell.block01
-        .settings-box__cell.block02
+        .settings-box__cell.block00(data-position = "1")
+        .settings-box__cell.block01(data-position = "2")
+        .settings-box__cell.block02(data-position = "3")
       .settings-box__row
-        .settings-box__cell.block10
-        .settings-box__cell.block11
-        .settings-box__cell.block12  
+        .settings-box__cell.block10(data-position = "4")
+        .settings-box__cell.block11(data-position = "5")
+        .settings-box__cell.block12(data-position = "6")  
       .settings-box__row
-        .settings-box__cell.block20
-        .settings-box__cell.block21
-        .settings-box__cell.block22
+        .settings-box__cell.block20(data-position = "7")
+        .settings-box__cell.block21(data-position = "8")
+        .settings-box__cell.block22(data-position = "9")
   .setting-pos.setting-pos_one
     .setting-pos__box
       label.setting-pos__text X
