--- a/source/style/_blocks/_position.scss
+++ b/source/style/_blocks/_position.scss
@@ -77,16 +77,15 @@
 }
 
 .setting-box {
-  @extend %clearfix;
-  width: 101px;
-  height: 101px;
+  width: 100px;
+  height: 100px;
   clear: both;
   background-color: #dbe1e8;
   box-sizing: border-box;
   display: table;
   border-collapse: collapse;
   float: left;
- margin-top: 36px;
+  margin-top: 36px;
 }
 
 .settings-box__row {
@@ -96,7 +95,7 @@
 .settings-box__cell {
   display: table-cell;
   width: 33px;
-  height: 33px;
+  height: 32px;
   border: 1px solid #9eb2c0;
 
   &:hover {
@@ -281,3 +280,26 @@ input[type='number'] {
   left: 0;
   top: 0;
  }
+
+.tilingMode{
+  border: 1px solid #9eb2c0;
+  position: relative;
+}
+
+.parallel,
+.vertical{
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: #f97e76;
+}
+.parallel{
+  width: 100%;
+}
+.vertical{
+  height: 100%;
+}
