Перед слиянием, добавлена верстка блока замощения. Добавлены всплывашки.

--- a/source/style/_blocks/_base.scss
+++ b/source/style/_blocks/_base.scss
@@ -50,7 +50,8 @@ ul li:last-child{
   background: #d5d4d6;
   width: 43px;
   text-align: center;
-  height: 34px;
+line-height: 38px;
+    height: 38px;
   padding-top: 2px;
 
   &:hover{
