--- a/source/template/_common/_settings.jade
+++ b/source/template/_common/_settings.jade
@@ -2,7 +2,7 @@
 form.form-settings#form(method="post")
   input(type="hidden" name="fileurl" class="fileurl" id="imgInput" )
   input(type="hidden" name="watermark"  id="waterInput" )
-  input(type="hidden" name="opacity" id="opacity-input")
+  input(type="hidden" name="opacity" id="opacity-input" value="100")
   input(type="hidden" name="mode" id="valuemode" value="single-mode")
   include _file
   include _position
