Bug fix, download done

--- a/source/template/_common/_settings.jade
+++ b/source/template/_common/_settings.jade
@@ -4,6 +4,7 @@ form.form-settings#form(method="post")
   input(type="hidden" name="watermark"  id="waterInput" )
   input(type="hidden" name="opacity" id="opacity-input" value="100")
   input(type="hidden" name="mode" id="valuemode" value="single-mode")
+  input(type="hidden" name="koef" id="valueKoef")
   include _file
   include _position
   include _opacity
