--- a/source/style/_blocks/_content.scss
+++ b/source/style/_blocks/_content.scss
@@ -29,6 +29,7 @@
   margin-left: 24px;
   display: flex;
   overflow: hidden;
+  background: url(/assets/images/bg_canvas.jpg) repeat;
 }
 .content__img-block{
   margin: auto;
